Change title name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEDDING TIME</title>
+    <title>Amora Aesthetics E-commerce Website</title>
     <script
       src="https://kit.fontawesome.com/3fa49596ca.js"
       crossorigin="anonymous"
